Added Dockerfile for Render deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 spring.application.name=Inventory_Management_System
 
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/inventory_db
+#spring.datasource.username=root
+#spring.datasource.password=nikita11
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory_db
-spring.datasource.username=root
-spring.datasource.password=nikita11
+
+spring.datasource.url=jdbc:mysql://bm1mescnsycx4noihb7t-mysql.services.clever-cloud.com:3306/bm1mescnsycx4noihb7t?useSSL=true&requireSSL=true&verifyServerCertificate=false
+spring.datasource.username=u1ycqks8mjiavgwi
+spring.datasource.password=ROGDP0ExeGrjRnnO194L
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-server.port=8080
