--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.application.name=Inventory_Management_System
 #server.port=8080
 
 
-spring.datasource.url=jdbc:mysql://bm1mescnsycx4noihb7t-mysql.services.clever-cloud.com:3306/bm1mescnsycx4noihb7t?useSSL=true&requireSSL=true&verifyServerCertificate=false
-spring.datasource.username=u1ycqks8mjiavgwi
-spring.datasource.password=ROGDP0ExeGrjRnnO194L
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.username=root
+spring.datasource.password=SSILHdNeQXJcqHQezZNOmaPfFoTiPcUL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
